# SCPCBIrrlicht

./: CMakeLists.txt  README.md  SCPCBIrrlicht.aps  SCPCBIrrlicht.rc  SCPCBIrrlicht.sln  SCPCBIrrlicht.vcxproj  SCPCBIrrlicht.vcxproj.filters  resource.h
Libs/oggVorbis/lib/ogg/: libogg_static.lib
Libs/oggVorbis/lib/vorbis/: libvorbis_static.lib  libvorbisfile_static.lib
Src/: Main.cpp
Src/Libs/FreeType/lib/: freetype.lib
Src/Libs/oggVorbis/lib/ogg/: libogg.lib
Src/Libs/oggVorbis/lib/ogg/libogg.tlog/: CL.12920.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libogg.lastbuildstate
Src/Libs/oggVorbis/lib/ogg/libogg_static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  libogg_static.lastbuildstate
Src/Libs/oggVorbis/lib/vorbis/: libvorbis_static.lib  libvorbisfile_static.lib
Src/World/: World.cpp  World.h
Src/World/NPCs/: NPC096.h  NPC106.cpp  NPC106.h
